--- a/dance-util/pom.xml
+++ b/dance-util/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>idv.danceframework</groupId>
 		<artifactId>danceframework-project</artifactId>
-		<version>${project.version}</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>dance-util</artifactId>
 	<name>dance-util</name>
